--- a/user-onboarding/src/index.css
+++ b/user-onboarding/src/index.css
@@ -45,3 +45,10 @@ input {
 	display: flex;
 	flex-flow: row-reverse;
 }
+
+button {
+	width: 50%;
+	max-width: 150px;
+	margin: 5px auto;
+	padding: 7px;
+}
